--- a/style.css
+++ b/style.css
@@ -96,8 +96,14 @@ h1 {
   right: 2.93rem;
 }
 
+#home .image img,
+#home .image::before {
+  border-radius: 0.25rem;
+}
+
 #home .text {
   margin-left: 1.5rem;
   margin-right: 1.5rem;
+  text-align: center;
 }
 
