--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ h1 {
   align-items: center;
   padding: 0 2rem;
   border-radius: 0.25rem;
-  font: 500 1rem  "DM Sans";
+  font: 500 1rem  "DM Sans", sans-serif;
 }
 
 .logo {
