--- a/style.css
+++ b/style.css
@@ -89,21 +89,19 @@ h1 {
   margin-bottom: 2rem;
   display: flex;
 
-  width: 100%;
   position: fixed;
   top: 0;
   left: 0;
   z-index: 100;
   background-color: var(--body-color);
+  width: 100%;
 }
 
-nav {
-  height: --header-height;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+main {
+  margin-top: calc(var(--header-height) + 2rem);
 }
 
+/* ====== LOGO ====== */
 .logo {
   color: var(--title-color);
   font: 700 1.31rem 'Poppins', sans-serif;
@@ -113,8 +111,32 @@ nav {
   color: var(--base-color);
 }
 
-main {
-  margin-top: var(--header-height);
+/* ====== NAVIGATION ====== */
+nav {
+  height: var(--header-height);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
+
+nav .menu {
+  opacity: 0;
+  visibility: hidden;
+}
+
+nav.show .menu {
+  opacity: 1;
+  visibility: visible;
+
+  background: var(--body-color);
+
+  height: 100vh;
+  width: 100vw;
+
+  position: fixed;
+  top: 0;
+  left: 0;
 }
 
 /* ====== HOME ====== */
