style show menu

--- a/style.css
+++ b/style.css
@@ -5,6 +5,10 @@
   box-sizing: border-box;
 }
 
+ul {
+  list-style: none;
+}
+
 a {
   text-decoration: none;
 }
@@ -38,7 +42,7 @@ body {
   -webkit-font-smoothing: antialiased;
 }
 
-h1 {
+.title {
   font: 700 1.875rem 'Poppins', sans-serif;
   color: var(--title-color);
   -webkit-font-smoothing: auto;
@@ -120,11 +124,36 @@ nav {
   width: 100%;
 }
 
+nav ul li {
+  text-align: center;
+}
+
+nav ul li a {
+  transition: color 0.2s;
+  position: relative;
+}
+
+nav ul li a:hover {
+  color: var(--base-color);
+}
+
+nav ul li a:hover::after {
+  content: '';
+  width: 100%;
+  height: 2px;
+  background: var(--base-color);
+
+  position: absolute;
+  left: 0;
+  bottom: -1.5rem;
+}
+
 nav .menu {
   opacity: 0;
   visibility: hidden;
 }
 
+/* Mostrar Menu */
 nav.show .menu {
   opacity: 1;
   visibility: visible;
@@ -137,6 +166,13 @@ nav.show .menu {
   position: fixed;
   top: 0;
   left: 0;
+
+  display: grid;
+  place-content: center;
+}
+
+nav.show ul.grid {
+  gap: 4rem;
 }
 
 /* ====== HOME ====== */
