--- a/style.css
+++ b/style.css
@@ -88,6 +88,10 @@ body {
   padding: 5rem 0;
 }
 
+.section .title {
+  margin-bottom: 1rem;
+}
+
 #header {
   border-bottom: 1px solid #E4E4E4;
   margin-bottom: 2rem;
@@ -248,4 +252,41 @@ nav.show div.icon-close {
 #home .text p {
   margin-bottom: 2rem;
   max-width: 100%;
+}
+
+
+/* ====== ABOUT ====== */
+
+#about .container {
+  margin: 0;
+}
+
+#about .image {
+  position: relative;
+}
+
+#about .image::before {
+  content: '';
+  height: 100%;
+  width: 100%;
+  background: var(--base-color-second);
+  position: absolute;
+  top: -8.3%;
+  left: -33.7%;
+  z-index: 0;
+}
+
+#about .image img {
+  position: relative;
+}
+
+#about .image img,
+#about .image::before {
+  border-radius: 0.25rem;
+}
+
+#about .text {
+  margin-left: 1.5rem;
+  margin-right: 1.5rem;
+  text-align: center;
 }
