--- a/style.css
+++ b/style.css
@@ -126,6 +126,18 @@ body {
   width: 100%;
 }
 
+#header.scroll {
+  box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.15);
+}
+
+/* #header.scroll .logo span {
+  color: white;
+}
+
+#header.scroll .icon-menu {
+  color: white;
+} */ 
+
 main {
   margin-top: calc(var(--header-height) + 2rem);
 }
