--- a/style.css
+++ b/style.css
@@ -507,4 +507,16 @@ footer .social a {
 
   font-size: 1.5rem;
   line-height: 0;
+
+  visibility: hidden;
+  opacity: 0;
+  transition: 0.3s;
+
+  transform: translateY(100%)
+}
+
+.back-to-top.show {
+  visibility: visible;
+  opacity: 1;
+  transform: translateY(0);
 }
