--- a/style.css
+++ b/style.css
@@ -492,6 +492,12 @@ footer i {
 
 footer .social a {
   margin-right: 2rem;
+  transition: 0.3s;
+  display: inline-block;
+}
+
+footer .social a:hover {
+  transform: translateY(-7px);
 }
 
 .back-to-top {
