--- a/assets/fonts/style.css
+++ b/assets/fonts/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?or6wso');
-  src:  url('fonts/icomoon.eot?or6wso#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?or6wso') format('truetype'),
-    url('fonts/icomoon.woff?or6wso') format('woff'),
-    url('fonts/icomoon.svg?or6wso#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?e2589q');
+  src:  url('fonts/icomoon.eot?e2589q#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?e2589q') format('truetype'),
+    url('fonts/icomoon.woff?e2589q') format('woff'),
+    url('fonts/icomoon.svg?e2589q#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,6 +25,12 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-shopping-bag:before {
+  content: "\e90d";
+}
+.icon-home:before {
+  content: "\e90e";
+}
 .icon-arrow-up:before {
   content: "\e90c";
 }
