start media queries

--- a/style.css
+++ b/style.css
@@ -32,6 +32,9 @@ img {
   --text-color-light: hsl(0, 0%, 98%);
   --body-color: hsl(0, 0%, 98%);
   --background-color: hsl(0, 0%, 100%);
+
+  /* fonts */
+  --title-font-size: 1.875rem
 }
 
 /* ====== BASE ====== */
@@ -47,7 +50,7 @@ body {
 }
 
 .title {
-  font: 700 1.875rem 'Poppins', sans-serif;
+  font: 700 var(--title-font-size) 'Poppins', sans-serif;
   color: var(--title-color);
   -webkit-font-smoothing: auto;
 }
@@ -526,3 +529,17 @@ footer .social a:hover {
   opacity: 1;
   transform: translateY(0);
 }
+
+
+/* Responsive */
+
+/* ====== MEDIA QUERIES ====== */
+/* extra large devices: 1200 > */  
+/* large devices: 1023 > */  
+/* large devices: 992 > */
+@media (min-width: 992px) {
+  :root {
+    --title-font-size: 2.2rem
+  }
+}
+/* medium devices: 767 > */  
