start media queria large device

--- a/style.css
+++ b/style.css
@@ -34,7 +34,8 @@ img {
   --background-color: hsl(0, 0%, 100%);
 
   /* fonts */
-  --title-font-size: 1.875rem
+  --title-font-size: 1.875rem;
+  --subtitle-font-size: 1rem;
 }
 
 /* ====== BASE ====== */
@@ -106,6 +107,10 @@ body {
 
 .section .title {
   margin-bottom: 1rem;
+}
+
+.section.subtitle {
+  font-size: var(--subtitle-font-size);
 }
 
 .section header {
@@ -539,7 +544,8 @@ footer .social a:hover {
 /* large devices: 992 > */
 @media (min-width: 992px) {
   :root {
-    --title-font-size: 2.2rem
+    --title-font-size: 2.25rem;
+    --subtitle-font-size: 1.125rem;
   }
 }
 /* medium devices: 767 > */  
