--- a/style.css
+++ b/style.css
@@ -36,6 +36,9 @@ img {
   /* fonts */
   --title-font-size: 1.875rem;
   --subtitle-font-size: 1rem;
+
+  --title-font: 'Poppins', sans-serif;
+  --body-font: 'DM Sans', sans-serif;
 }
 
 /* ====== BASE ====== */
@@ -44,14 +47,14 @@ html {
 }
 
 body {
-  font: 400 1rem 'DM Sans', sans-serif;
+  font: 400 1rem var(--body-font);
   background: var(--body-color);
   color: var(--text-color);
   -webkit-font-smoothing: antialiased;
 }
 
 .title {
-  font: 700 var(--title-font-size) 'Poppins', sans-serif;
+  font: 700 var(--title-font-size) var(--title-font);
   color: var(--title-color);
   -webkit-font-smoothing: auto;
 }
@@ -64,7 +67,7 @@ body {
   align-items: center;
   padding: 0 2rem;
   border-radius: 0.25rem;
-  font: 500 1rem  "DM Sans", sans-serif;
+  font: 500 1rem  var(--body-font);
   transition: background 0.3s;
 }
 
@@ -109,7 +112,7 @@ body {
   margin-bottom: 1rem;
 }
 
-.section.subtitle {
+.section .subtitle {
   font-size: var(--subtitle-font-size);
 }
 
@@ -150,7 +153,7 @@ body {
 /* ====== LOGO ====== */
 .logo {
   color: var(--title-color);
-  font: 700 1.31rem 'Poppins', sans-serif;
+  font: 700 1.31rem var(--title-font);
 }
 
 .logo span {
@@ -548,6 +551,25 @@ footer .social a:hover {
 @media (min-width: 1200px) {
   .section {
     padding: 10rem 0;
+  }
+
+  nav .menu {
+    opacity: 1;
+    visibility: visible;
+    top: 0;
+  }
+
+  nav .menu ul {
+    display: flex;
+    gap: 2rem;
+  }
+
+  nav .menu ul li a.title {
+    font: 400 1rem var(--body-font)
+  }
+
+  nav .icon-menu {
+    display: none;
   }
 
   main {
