--- a/style.css
+++ b/style.css
@@ -549,6 +549,12 @@ footer .social a:hover {
 /* ====== MEDIA QUERIES ====== */
 /* extra large devices: 1200 > */  
 @media (min-width: 1200px) {
+  .container {
+    max-width: 1120px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
   .section {
     padding: 10rem 0;
   }
@@ -570,6 +576,19 @@ footer .social a:hover {
 
   nav .icon-menu {
     display: none;
+  }
+
+  #home .container {
+    grid-auto-flow: column;
+    justify-content: space-between;
+  }
+
+  #home .image {
+    order: 1;
+  }
+  
+  #home .text {
+    order: 0;
   }
 
   main {
