--- a/style.css
+++ b/style.css
@@ -182,7 +182,8 @@ nav ul li a {
   position: relative;
 }
 
-nav ul li a:hover {
+nav ul li a:hover,
+nav ul li a.active {
   color: var(--base-color);
 }
 
@@ -199,7 +200,8 @@ nav ul li a::after {
   transition: width 0.2s;
 }
 
-nav ul li a:hover::after {
+nav ul li a:hover::after,
+nav ul li a.active::after {
   width: 100%;
 }
 
@@ -534,7 +536,7 @@ footer .social a:hover {
   opacity: 0;
   transition: 0.3s;
 
-  transform: translateY(100%)
+  transform: translateY(100%);
 }
 
 .back-to-top.show {
@@ -585,7 +587,13 @@ footer .social a:hover {
   }
 
   nav .menu ul li a.title {
-    font: 400 1rem var(--body-font)
+    font: 400 1rem var(--body-font);
+    -webkit-font-smoothing: antialiased;
+  }
+
+  nav .menu ul li a.title.active {
+    font-weight: bold;
+    -webkit-font-smoothing: auto; 
   }
 
   nav .icon-menu {
